个人中心功能完成

--- a/home/index.html
+++ b/home/index.html
@@ -31,9 +31,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="layBody">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="layBody">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="layBody">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascipt:;" id="logoutBtn"><span
@@ -67,9 +67,12 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-key"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-key"></i>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-key"></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="layBody"><i
+                                        class="layui-icon layui-icon-key"></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="layBody"><i
+                                        class="layui-icon layui-icon-key"></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="layBody"><i
+                                        class="layui-icon layui-icon-key"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
